2006-08-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTableUI.java
	(MouseInputHandler.mousePressed): Request focus on list
	component.

2006-08-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(MouseInputHandler.mousePressed): Request focus on list
	component.

2006-08-05  Roman Kennke  <kennke@aicas.com>

	PR 28650
	* javax/swing/plaf/basic/BasicMenuBarUI.java
	(getActionMap): Store ActionMap in MenuBar.actionMap, rather
	than Tree.actionMap.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(action): Removed obsolete field.
	(uninstallKeyboardActions): Removed action field handling.
	(installKeyboardActions): Removed action field handling.
	(createDefaultActions): Don't install removed TreeAction.
	(TreeAction): Removed obsolete inner class.
	(ActionListenerProxy): Removed obsolete inner class.
	(MouseHandler.mousePressed): Request focus on JTree component
	on mouse press.

2006-08-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/DefaultHighlight.java
	(DefaultHighlightPainter.paintHighlight): Removed method.
	(DefaultHighlightPainter.paintLayer): Implemented.
	(DefaultHighlightPainter.paint): Implemented more efficient
	painting for multiline-highlights.
	(HighlightEntry.p0): Changed to be a Position.
	(HighlightEntry.p1): Changed to be a Position.
	(HighlightEntry.HighlightEntry): Changed to take Position
	arfuments.
	(HighlightEntry.getStartOffset): Changed to return p0.getOffset();
	(HighlightEntry.getEndOffset): Changed to return p1.getOffset();
	(LayerHighlightEntry): New inner class. Extends HighlightEntry
	and tracks the painted rectangle for efficient repainting.
	(addHighlight): Handle layered highlight.
	(changeHighlight): Handle layered highlight.
	(paintLayeredHighlights): Implemented.
	(paint): Paint only non-layered highlights here.
	(removeAllHighlights): Trigger correct repaint.
	(removeHighlight): Handle layered highlight here for
	more efficient repainting.