@@ -1,3 +1,8 @@
+2006-08-08  Mark Wielaard  <mark@klomp.org>
+
+	* javax/swing/text/DefaultHighlighter.java: Qualify
+	Highlighter.HighlightPainter class name for gcj.
+
 2006-08-05  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/plaf/basic/BasicTableUI.java
